# entice

./: .drone.yml  .travis.yml  AUTHORS  LICENSE  README.md  lgtm.yml  meson.build  meson_options.txt  sonar-project.properties
.github/workflows/: c-cpp.yml  linux.yml  sonar.yml
build_wrapper_output_directory/: build-wrapper-dump.json
data/: meson.build
data/desktop/: entice.desktop  meson.build
data/icons/: meson.build
data/themes/: default.edc  meson.build
